@@ -283,8 +283,18 @@ std::string Rts2Conn::getStateString ()
 		case DEVICE_TYPE_WEATHER:
 			_os << "weather " << real_state;
 			break;
-		case DEVICE_TYPE_ARCH:
-			_os << "arch " << real_state;
+		case DEVICE_TYPE_ROTATOR:
+			switch (real_state & ROT_MASK_ROTATING)
+			{
+				case ROT_IDLE:
+					_os << "idle";
+					break;
+				case ROT_ROTATING:
+					_os << "ROTATING";
+					break;
+				defualt:
+					_os << "UNKNOWN";	
+			}
 			break;
 		case DEVICE_TYPE_PHOT:
 			if (real_state & PHOT_INTEGRATE)
