@@ -91,8 +91,6 @@ astrometry_timeout = 100
 imageglob = "/images/004/que/*/*.fits"
 
 obsprocess = "/etc/rts2/obsprocess"
-darkprocess = "/etc/rts2/darkprocess"
-flatprocess = "/etc/rts2/flatprocess"
 
 [C0]
 xplate = 4.7
