@@ -1,3 +1,6 @@
+2011-07-17
+ * Rotator device type, Pyxis Optec rotator driver
+
 2011-07-06
  * Added support for AstroHaven Enterprises domes 
 
